# app/routes/admin_routes.py
@@ -1,0 +1,9 @@
+
+from flask import Blueprint
+from app.controllers.admin_controller import AdminController
+
+admin_routes = Blueprint("admin_routes", __name__)
+
+admin_routes.route("/user_admin/login", methods=["POST"])(
+    AdminController.login
+)
